--- a/Rede de reações.ipynb
+++ b/Rede de reações.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import rdkit   "
+    "from rdkit import Chem"
    ]
   }
  ],
@@ -26,7 +26,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.8"
   },
   "orig_nbformat": 4,
   "vscode": {
