--- a/Treino de sintaxes/Dscribe.ipynb
+++ b/Treino de sintaxes/Dscribe.ipynb
@@ -2,44 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import dscribe\n",
+    "from ase.build import molecule\n",
     "from dscribe.descriptors import CoulombMatrix\n",
-    "from rdkit import Chem\n",
-    "\n",
-    "# Setting up the CM descriptor\n",
-    "cm = CoulombMatrix(n_atoms_max=6)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'molecule' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Create output for multiple system\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m samples \u001b[38;5;241m=\u001b[39m [\u001b[43mmolecule\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mH2O\u001b[39m\u001b[38;5;124m\"\u001b[39m), molecule(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNO2\u001b[39m\u001b[38;5;124m\"\u001b[39m), molecule(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCO2\u001b[39m\u001b[38;5;124m\"\u001b[39m)]\n\u001b[0;32m      3\u001b[0m coulomb_matrices \u001b[38;5;241m=\u001b[39m cm\u001b[38;5;241m.\u001b[39mcreate(samples)            \u001b[38;5;66;03m# Serial\u001b[39;00m\n\u001b[0;32m      4\u001b[0m coulomb_matrices \u001b[38;5;241m=\u001b[39m cm\u001b[38;5;241m.\u001b[39mcreate(samples, n_jobs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)  \u001b[38;5;66;03m# Parallel\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'molecule' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Create output for multiple system\n",
-    "samples = [molecule(\"H2O\"), molecule(\"NO2\"), molecule(\"CO2\")]\n",
-    "coulomb_matrices = cm.create(samples)            # Serial\n",
-    "coulomb_matrices = cm.create(samples, n_jobs=2)  # Parallel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -57,14 +32,10 @@
     }
    ],
    "source": [
-    "import dscribe\n",
-    "from ase.build import molecule\n",
     "\n",
-    "# Create an ASE Atoms object for methanol\n",
     "methanol = molecule(\"CH3OH\")\n",
     "\n",
-    "# Set up the calculator with the desired parameters for the Coulomb matrix\n",
-    "calc = dscribe.descriptors.CoulombMatrix(\n",
+    "calc = CoulombMatrix(\n",
     "    n_atoms_max=len(methanol),\n",
     "    permutation=\"sorted_l2\",\n",
     ")\n",
