--- a/Treino de sintaxes/Dscribe.ipynb
+++ b/Treino de sintaxes/Dscribe.ipynb
@@ -2,56 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dscribe\n",
-    "from ase.build import molecule\n",
-    "from dscribe.descriptors import CoulombMatrix\n",
+    "from ase.io import read, write\n",
+    "from dscribe.descriptors import ACSF\n",
+    "from ase.build import molecule, bulk\n",
+    "from ase import Atoms\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np \n",
+    "import pandas as pd\n",
+    "import glob\n",
+    "import os\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coulomb Matrix for Methanol:\n",
-      "[73.51669472 33.73297539  8.24741496  3.96011613  3.808905    3.808905\n",
-      " 33.73297539 36.8581052   3.08170819  5.50690929  5.47078813  5.47078813\n",
-      "  8.24741496  3.08170819  0.5         0.35443545  0.42555057  0.42555057\n",
-      "  3.96011613  5.50690929  0.35443545  0.5         0.56354208  0.56354208\n",
-      "  3.808905    5.47078813  0.42555057  0.56354208  0.5         0.56068143\n",
-      "  3.808905    5.47078813  0.42555057  0.56354208  0.56068143  0.5       ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "methanol = molecule(\"CH3OH\")\n",
-    "\n",
-    "calc = CoulombMatrix(\n",
-    "    n_atoms_max=len(methanol),\n",
-    "    permutation=\"sorted_l2\",\n",
-    ")\n",
-    "\n",
-    "# Get the Coulomb matrix for methanol\n",
-    "coulomb_matrix = calc.create(methanol)\n",
-    "\n",
-    "# Display the Coulomb matrix\n",
-    "print(\"Coulomb Matrix for Methanol:\")\n",
-    "print(coulomb_matrix)\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -65,7 +43,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+   }
   }
  },
  "nbformat": 4,
